--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width:100%;
+    width:90%;
+    border-radius: 15px;
+    margin: auto;
     flex-wrap: wrap;
     background-color: rgb(253, 253, 253);
     gap:0.5em;
