--- a/style.css
+++ b/style.css
@@ -131,3 +131,16 @@ box-shadow: 10px 5px 5px rgb(236, 228, 228);
     font-size: smaller;
     bottom:0;
 }
+@media only screen and (min-device-width : 320px) and (max-device-width : 700px) {
+    
+    
+
+    .animal:hover{
+        background-color: unset;
+    }
+    .card{
+        width: 300px;
+        height: 300px;
+        border-radius: 150px;
+    }
+}
